# Proyecto_Final_IA

./: .gitignore  COMANDOS.md  ESTADO_MODELO.md  GUIA_PROCESO.md  PROYECTO.md  Proyecto 2 IA 2026.docx  README.md  README_VOICE.md  REGLAS_CRITICAS.md  VOICE_CHEATSHEET.md  capture_dataset.py  dataset.py  diagnose_test.py  diagnose_voice.py  entrenamiento.ipynb  evaluate.py  extract_embeddings.py  extract_frames.py  generate_report.py  generate_voice_dataset.py  main_compound.py  main_compound_ptt2.py  main_robot.py  main_voice.py  model_gru.py  model_nav.py  model_voice.py  preprocessing.py  pyproject.toml  quick_test.py  requirements.txt  state_machine.py  test_manual.py  train.py  train_gru.py  train_kfold.py  train_voice.py  train_voice_kfold.py  utils.py  visualize_dataset.py  (+1 more)
docs/superpowers/plans/: 2026-05-13-voice-control.md
docs/superpowers/specs/: 2026-05-13-voice-control-design.md
esp32_firmware/: esp32_firmware.ino
estudio/: 11_ESTUDIA_ESTO_PRIMERO.md
metrics/: gru_report.json  kfold_report.md  kfold_results.json  nav_eval_report.json  voice_cm_train.csv  voice_cm_val.csv
models/: gru_model.pth
