[project]
name = "proyecto-ia-final"
version = "0.1.0"
description = "Navegación autónoma y reconocimiento de señales con CNN y ViT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "piper-tts>=1.4.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "scipy>=1.15.3",
    "pynput>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "python-docx>=1.2.0",
]
